# openNPL

./: .dockerignore  .gitignore  .readthedocs.yaml  CHANGELOG.rst  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  Dockerfile  Dockerfile.demo  LICENSE  MANIFEST.in  README.md  SECURITY.md  createadmin.py  dashboard.py  description_short.rst  docker-compose.yml  dockerfixtures.sh  loadfixtures.sh  makefixtures.sh  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  django.yml
common/: models.py
docs/: Makefile  migration_table.xlsx
eba_portfolio/: admin.py  apps.py  counterparty.py  counterparty_group.py  enforcement.py  external_collection.py  forbearance.py  loan.py  models.py  non_property_collateral.py  property_collateral.py  urls.py
npl_portfolio/: CHANGELOG.rst  README.rst  admin.py  apps.py  counterparty.py  counterparty_choices.py  counterparty_group.py  counterparty_group_choices.py  eba_field_helpers.py  enforcement.py  enforcement_choices.py  external_collection.py  external_collection_choices.py  forbearance.py  forbearance_choices.py  historical_repayment.py  historical_repayment_choices.py  loan.py  loan_choices.py  models.py  mortgage.py  non_property_collateral.py  non_property_collateral_choices.py  property_collateral.py  property_collateral_choices.py  urls.old_style.py  urls.py  views.old_style.py  views.py
openNPL/: asgi.py  jazzmin_settings.py  npl_serializers.py  npl_views.py  serializers.py  settings.py  sflp_serializers.py  sflp_views.py  urls.py  views.py  wsgi.py
sflp_portfolio/: CHANGELOG.rst  Counterparty.py  Enforcement.py  Forbearance.py  Loan.py  Portfolio.py  PortfolioSnapshot.py  PropertyCollateral.py  README.rst  RepaymentSchedule.py  admin.py  apps.py  counterparty.py  enforcement.py  forbearance.py  loan.py  loan_choices.py  models.py  property_collateral.py  urls.py  views.py
start/: apps.py  urls.py  views.py
tests/: all_models.py  test.py  test_api.py
(+90 files in other folders)
