[project]
name = "opennpl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "behave-django>=1.9.0",
    "django>=5.2.8",
    "django-countries>=8.2.0",
    "django-debug-toolbar>=6.1.0",
    "django-extensions>=4.1",
    "django-htmx>=1.26.0",
    "django-import-export>=4.3.14",
    "django-jazzmin>=3.0.1",
    "django-json-widget>=2.1.0",
    "django-jsoneditor>=0.2.4",
    "django-leaflet>=0.32.0",
    "django-markdownfield>=0.11.0",
    "django-model-utils>=5.0.0",
    "django-treebeard>=4.7.1",
    "djangorestframework>=3.16.1",
    "drf-yasg>=1.21.11",
    "markdown>=3.10",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "scipy>=1.16.3",
    "setuptools>=80.9.0",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "tablib>=3.9.0",
]
