[metadata]
license_file = LICENSE
name = openNPL
version = 0.7.0
description = Open source platform for the management of non-performing loans
long_description = file:description_short.rst
url = https://github.com/open-risk/openNPL
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.14
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis

[sdist]
formats = gztar

[bdist_wheel]
universal=1

[pytest]
norecursedirs = .* docs build docs examples wheel
testpaths = tests

[flake8]
ignore = E226,E302,E41,E501
max-line-length = 160
exclude = tests/*
max-complexity = 10

[options]
include_package_data = true
python_requires = >=3.14
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django>=5.2